new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/add_FILL0_wght400_GRAD0_opsz24.svg 	new file:   16. Ecommerce Management Portal Template - HTML, CSS, JS/add_a_photo_FILL0_wght400_GRAD0_opsz24.svg 	modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html

--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
@@ -64,7 +64,8 @@
         <div class="main-content">
             <div class="leading">
                 <div class="lead">
-                    <h1>hello</h1>
+                    <h1>Add Product</h1>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
                 </div>
                 <div class="lead">
                     <h1>hello</h1>
@@ -128,7 +129,7 @@
         </section>
 
         <section>
-            
+
         </section>
 
         <section>
