modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html

--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
@@ -80,8 +80,9 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Product</th>
+                            
                             <th>Order ID</th>
+                            <th>Name</th>
                             <th>Date</th>
                             <th>Status</th>
                             <th>Details</th>
