modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html

--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
@@ -90,39 +90,46 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>product</td>
-                            <td>product</td>
-                            <td>product</td>
-                            <td>Pending</td>
-                            <td>product</td>
+                            <td>sk0001</td>
+                            <td>John</td>
+                            <td>1 Jan, 2023</td>
+                            <td>Aproved</td>
+                            <td>View</td>
                         </tr>
                         <tr>
-                            <td>product</td>
-                            <td>product</td>
-                            <td>product</td>
+                            <td>sk0001</td>
+                            <td>John</td>
+                            <td>1 Jan, 2023</td>
+                            <td>Aproved</td>
+                            <td>View</td>
+                        </tr>
+                        <tr>
+                            <td>sk0001</td>
+                            <td>John</td>
+                            <td>1 Jan, 2023</td>
+                            <td>Aproved</td>
+                            <td>View</td>
+                        </tr>
+                        <tr>
+                            <td>sk0001</td>
+                            <td>John</td>
+                            <td>1 Jan, 2023</td>
+                            <td>Aproved</td>
+                            <td>View</td>
+                        </tr>
+                        <tr>
+                            <td>sk0001</td>
+                            <td>John</td>
+                            <td>1 Jan, 2023</td>
+                            <td>Aproved</td>
+                            <td>View</td>
+                        </tr>
+                        <tr>
+                            <td>sk0001</td>
+                            <td>John</td>
+                            <td>1 Jan, 2023</td>
                             <td>Delivered</td>
-                            <td>product</td>
-                        </tr>
-                        <tr>
-                            <td>product</td>
-                            <td>product</td>
-                            <td>product</td>
-                            <td>Delivered</td>
-                            <td>product</td>
-                        </tr>
-                        <tr>
-                            <td>product</td>
-                            <td>product</td>
-                            <td>product</td>
-                            <td>Approved</td>
-                            <td>product</td>
-                        </tr>
-                        <tr>
-                            <td>product</td>
-                            <td>product</td>
-                            <td>product</td>
-                            <td>Pending</td>
-                            <td>product</td>
+                            <td>View</td>
                         </tr>
                     </tbody>
                 </table>
