modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html 	modified:   16. Ecommerce Management Portal Template - HTML, CSS, JS/main.css

--- a/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
+++ b/16. Ecommerce Management Portal Template - HTML, CSS, JS/index.html
@@ -6,6 +6,7 @@
   <title>Responsive Navigation Bar</title>
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   
 </head>
 <body>
@@ -182,6 +183,16 @@
                     <p>Hello. Am Jane...</p>
                 </div>
                 
+            </div>
+
+            <div class="socials">
+                
+                <span><i class="fa-brands fa-facebook"></i></span>
+                <span><i class="fa-brands fa-x-twitter"></i></span>
+                <span><i class="fa-brands fa-instagram"></i></span>
+                <span><i class="fa-brands fa-tiktok"></i></span>
+                <span><i class="fa-brands fa-whatsapp"></i></span>
+                <span><i class="fa-brands fa-youtube"></i></span>
             </div>
         </div>
     </div>
