modified:   17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html

--- a/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
+++ b/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
@@ -89,10 +89,10 @@
                         <thead>
                             <tr>
                                 
-                                <th>Order ID</th>
+                                <th>ID</th>
                                 <th>Name</th>
                                 <th>Date</th>
-                                <th>Status</th>
+                                <th>SKU</th>
                                 <th>Details</th>
                             </tr>
                         </thead>
