modified:   17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html

--- a/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
+++ b/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
@@ -93,7 +93,7 @@
                                 <th>Name</th>
                                 <th>Date</th>
                                 <th>SKU</th>
-                                <th>Details</th>
+                                <th>Edit</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -102,21 +102,21 @@
                                 <td>John</td>
                                 <td>1 Jan, 2023</td>
                                 <td>Pending</td>
-                                <td>View</td>
+                                <td>Edit</td>
                             </tr>
                             <tr>
                                 <td>#sk0002</td>
                                 <td>John</td>
                                 <td>1 Jan, 2023</td>
                                 <td>Approved</td>
-                                <td>View</td>
+                                <td>Edit</td>
                             </tr>
                             <tr>
                                 <td>SK0001</td>
                                 <td>John</td>
                                 <td>1 Jan, 2023</td>
                                 <td>Cancelled</td>
-                                <td>View</td>
+                                <td>Edit</td>
                             </tr>
                             <tr>
                                 <td>sk0001</td>
@@ -130,14 +130,14 @@
                                 <td>John</td>
                                 <td>1 Jan, 2023</td>
                                 <td>Dispatched</td>
-                                <td>View</td>
+                                <td>Edit</td>
                             </tr>
                             <tr>
                                 <td>sk0001</td>
                                 <td>John</td>
                                 <td>1 Jan, 2023</td>
                                 <td>Delivered</td>
-                                <td>View</td>
+                                <td>Edit</td>
                             </tr>
                         </tbody>
                     </table>
