--- a/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
+++ b/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
@@ -26,10 +26,10 @@
             <div class="navbar-links" id="navbar-links">
                 <ul>
                     <li><a href="#">Store</a></li>
-                    <li><a href="#">Orders</a></li>
-                    <li><a href="#">Inventory</a></li>
-                    <li><a href="#">Customers</a></li>
-                    <li><a href="#">Sales</a></li>
+                    <li><a href="#">New</a></li>
+                    <li><a href="#">Sale</a></li>
+                    <li><a href="#">Featured</a></li>
+                    <li><a href="#">Listed</a></li>
                     <li class="dropdown hide-on-mobile">
                         <a href="#" class="account-link">My Account</a>
                     </li>
