modified:   17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html

--- a/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
+++ b/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
@@ -72,19 +72,19 @@
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
                     </div>
                     <div class="lead">
-                        <h5>All Orders</h5>
+                        <h5>All products</h5>
                     </div>
                     <div class="lead">
-                        <h5>New Orders</h5>
+                        <h5>Listed</h5>
                     </div>
                     <div class="lead">
-                        <h5>New Customers</h5>
+                        <h5>Out of Stock</h5>
                     </div>
                     
                 </div>
                 <section>
                 <div class="orders">
-                    <h4>Recent Orders</h4>
+                    <h4>Products</h4>
                     <table>
                         <thead>
                             <tr>
