modified:   17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html

--- a/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
+++ b/17. Ecommerce Management Add Products Form Template - HTML, CSS, JS/index.html
@@ -80,6 +80,9 @@
                     <div class="lead">
                         <h5>Out of Stock</h5>
                     </div>
+                    <div class="lead">
+                        <h5>Out of Stock</h5>
+                    </div>
                     
                 </div>
                 <section>
